# SceneSwitcher

./: .clang-format  .cmake-format.json  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  BUILDING.md  CMakeLists.txt  CMakePresets.json  ObsSceneSwitcher.cpp  README.md  SceneSwitcher.cpp  Testing.cpp  advanced-scene-switcher-module.c  advanced-scene-switcher-nix.cpp  advanced-scene-switcher-osx.mm  advanced-scene-switcher-win.cpp  advanced-scene-switcher.cpp  advanced-scene-switcher.hpp  advanced.scene-switcher-module.c  buildspec.json  executable-switch.cpp  file-switch.cpp  general.cpp  hotkey.cpp  idle-switch.cpp  pause-switch.cpp  priority.cpp  random.cpp  scene-round-trip.cpp  scene-transitions.cpp  screen-region-switch.cpp  settings.cpp  settings.h  switcher-data-structs.hpp  switcher.cpp  switcher.h  utility.hpp  window-title-switch.cpp
plugins/: CMakeLists.txt
plugins/base/: CMakeLists.txt  macro-action-audio.cpp  macro-action-audio.hpp  macro-action-clipboard.cpp  macro-action-clipboard.hpp  macro-action-file.cpp  macro-action-file.hpp  macro-action-filter.cpp  macro-action-filter.hpp  macro-action-hotkey.cpp  macro-action-hotkey.hpp  macro-action-http-legacy.cpp  macro-action-http-legacy.hpp  macro-action-http.cpp  macro-action-http.hpp  macro-action-log.cpp  macro-action-log.hpp  macro-action-media.cpp  macro-action-media.hpp  macro-action-obs-settings.cpp  macro-action-obs-settings.hpp  macro-action-osc.cpp  macro-action-osc.hpp  macro-action-play-audio.cpp  macro-action-play-audio.hpp  macro-action-plugin-state.cpp  macro-action-plugin-state.hpp  macro-action-profile.cpp  macro-action-profile.hpp  macro-action-projector.cpp  macro-action-projector.hpp  macro-action-random.cpp  macro-action-random.hpp  macro-action-recording.cpp  macro-action-recording.hpp  macro-action-replay-buffer.cpp  macro-action-replay-buffer.hpp  macro-action-run.cpp  macro-action-run.hpp  macro-action-scene-collection.cpp  (+101 more)
plugins/base/utils/: audio-helpers.cpp  audio-helpers.hpp  connection-manager.cpp  connection-manager.hpp  cursor-helpers.cpp  cursor-helpers.hpp  day-of-week-selector.cpp  day-of-week-selector.hpp  filter-selection.cpp  filter-selection.hpp  hotkey-helpers.cpp  hotkey-helpers.hpp  json-helpers.cpp  json-helpers.hpp  monitor-helpers.cpp  monitor-helpers.hpp  osc-helpers.cpp  osc-helpers.hpp  process-config.cpp  process-config.hpp  profile-helpers.cpp  profile-helpers.hpp  scene-item-selection.cpp  scene-item-selection.hpp  source-interact.cpp  (+35 more)
plugins/http/: CMakeLists.txt  http-server-tab.cpp  http-server-tab.hpp  http-server.cpp  http-server.hpp  key-value-list.cpp  key-value-list.hpp  macro-action-http.cpp  macro-action-http.hpp  macro-condition-http.cpp  macro-condition-http.hpp
plugins/midi/: CMakeLists.txt  macro-action-midi.cpp  macro-action-midi.hpp  macro-condition-midi.cpp  macro-condition-midi.hpp  midi-helpers.cpp  midi-helpers.hpp  remove-bit-cast-for-macos-build.patch
plugins/mqtt/: CMakeLists.txt  macro-action-mqtt.cpp  macro-action-mqtt.hpp  macro-condition-mqtt.cpp  macro-condition-mqtt.hpp  mqtt-helpers.cpp  mqtt-helpers.hpp  mqtt-tab.cpp  mqtt-tab.hpp  topic-selection.cpp  topic-selection.hpp
plugins/openvr/: CMakeLists.txt  macro-condition-openvr.cpp  macro-condition-openvr.hpp
plugins/schedule/: CMakeLists.txt  macro-schedule-entry-dialog.cpp  macro-schedule-entry-dialog.hpp  macro-schedule-tab.cpp  macro-schedule-tab.hpp  macro-schedule.cpp  macro-schedule.hpp
plugins/scripting/: CMakeLists.txt  macro-action-script-inline.cpp  macro-action-script-inline.hpp  macro-action-script.cpp  macro-action-script.hpp  macro-condition-script-inline.cpp  macro-condition-script-inline.hpp  macro-condition-script.cpp  macro-script-handler.cpp  macro-segment-script-inline.cpp  macro-segment-script-inline.hpp  macro-segment-script.cpp  macro-segment-script.hpp
plugins/stream-deck/: CMakeLists.txt  macro-condition-stream-deck.cpp  macro-condition-stream-deck.hpp
plugins/twitch/: CMakeLists.txt  category-selection.cpp  category-selection.hpp  channel-selection.cpp  channel-selection.hpp  chat-connection.cpp  chat-connection.hpp  chat-message-pattern.cpp  chat-message-pattern.hpp  content-classification.cpp  content-classification.hpp  event-sub.cpp  event-sub.hpp  language-selection.cpp  language-selection.hpp  macro-action-twitch.cpp  macro-action-twitch.hpp  macro-condition-twitch.cpp  macro-condition-twitch.hpp  points-reward-selection.cpp  points-reward-selection.hpp  tag-selection.cpp  tag-selection.hpp  token.cpp  token.hpp  twitch-helpers.cpp  twitch-helpers.hpp  twitch-tab.cpp  twitch-tab.hpp  twitch-timestamp.cpp  twitch-timestamp.hpp
plugins/usb/: CMakeLists.txt  macro-condition-usb.cpp  macro-condition-usb.hpp  usb-helpers.cpp  usb-helpers.hpp
plugins/video/: CMakeLists.txt  area-selection.cpp  area-selection.hpp  cascade-classifier-detector.cpp  cascade-classifier-detector.hpp  dnn-detector.cpp  dnn-detector.hpp  macro-condition-video.cpp  macro-condition-video.hpp  object-detector.hpp  opencv-helpers.cpp  opencv-helpers.hpp  paramerter-wrappers.cpp  paramerter-wrappers.hpp  parameter-wrappers.cpp  parameter-wrappers.hpp  preview-dialog.cpp  preview-dialog.hpp  screenshot-dialog.cpp  screenshot-dialog.hpp  video-edit-area.cpp  video-edit-brightness.cpp  video-edit-color.cpp  video-edit-object-dnn.cpp  video-edit-object.cpp  video-edit-ocr.cpp
src/external-macro-modules/: CMakeLists.txt
src/macro-external/: CMakeLists.txt
tests/: CMakeLists.txt  catch.hpp  json.cpp  math.cpp  test-condition-logic.cpp  test-duration-modifier.cpp  test-json.cpp  test-macro-condition-file.cpp  test-macro-condition-process.cpp  test-macro-condition-window.cpp  test-macro-condition.cpp  test-macro.cpp  test-math.cpp  test-regex.cpp  test-twitch-timestamp.cpp  test-utility.cpp  test-variable.cpp  tests.cpp
tests/mocks/: obs-data.cpp  obs-data.h  ui-helpers.cpp  utility.cpp
tests/stubs/: macro-action-macro.cpp  macro-dock-settings.cpp  macro-edit.cpp  path-helpers.cpp  platform-funcs.cpp  plugin-state-helpers.cpp  ui-helpers.cpp
(+1023 files in other folders)
